@@ -36,7 +36,7 @@ class CategoryModel extends AdminModel
 
 		if (empty($data))
 		{
-			$data = $this->getItem();
+			$data = (object) $this->getItem()->getProperties();
 		}
 
 		$this->preprocessData('com_contactus.category', $data);
