@@ -53,7 +53,7 @@ class ItemModel extends AdminItemModel
 
 		if (empty($data))
 		{
-			$data = $this->getItem();
+			$data = (object) $this->getItem()->getProperties();
 		}
 
 		$this->preprocessData('com_contactus.item', $data);
