@@ -4,6 +4,7 @@ ContactUs 4.1.3
 + Notice about Joomla 4 End of Service
 ~ Joomla 5 preparation: Use DatabaseInterface instead of DatabaseDriver
 ~ Joomla 5 preparation: Normalise plugin event calling
+~ Joomla 5 preparation: Loading form data MUST NOT return a Table anymore
 ~ Block uninstallation of child extensions
 ~ Force Joomla to create its namespace map afresh at the end of installation, in case it failed to do that automatically
 
